Fix tabview overflow

--- a/src/theme/elements/tab-view.scss
+++ b/src/theme/elements/tab-view.scss
@@ -28,5 +28,6 @@
 
   .p-tabview-panels {
     background-color: transparent;
+    padding: 0 1.25rem;
   }
 }
